fixed gap

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -110,16 +110,17 @@
     padding: 1.5rem 1.5rem;
     border-radius: 8px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    min-height: 20rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 1rem;
 
     align-items: stretch;
 
     @include breakpoint(tablet) {
       width: 40%;
       padding: 3rem 3rem;
+      min-height: 20rem;
     }
 
     @include breakpoint(desktop) {
